# Boss-Man

./: .gitignore  NOTICE  Package.swift  README.md  boss-man-iframe.html  project.yml  remove_semicolons.py  remove_semicolons2.py
.agent/index/: index.jsonl
.agent/plans/: plan_main.md
.github/workflows/: build-android-webview.yml  build-android.yml  build-asteroidz-native-macos.yml  build-embedded.yml  build-linux-webview.yml  build-linux.yml  build-macos-webview.yml  build-swift-wasm.yml  build-web.yml  build-windows-webview.yml  build-windows.yml  release-macos.yml  spritekit.yml
Boss-Man-SpriteKit/: .gitignore  README.md  build.sh
Boss-Man-SpriteKit/web/: index.html
Boss-Man.xcodeproj/: project.pbxproj
Boss-Man/Boss-Man/: Boss-Man.entitlements  BossAI.swift  BossController.swift  BossManApp.swift  ContactRouter.swift  GameCenterClient.swift  GameScene.swift  GridMap.swift  HUD.swift  LeaderboardPanel.swift  LevelEditorScene.swift  Levels.swift  LocalHighScores.swift  MazeBuilder.swift  MoveDirection.swift  Pathfinder.swift  PhysicsCategory.swift  PixelPerson.swift  PointerInputController.swift  PowerPelletTimer.swift  RoundState.swift  ScorePopup.swift  SoundManager.swift  Strings.swift  TitleScene.swift  TravelerGlyph.swift  TravelerSpawner.swift  UsernameDialog.swift  WaterDroplet.swift  WaterGunState.swift  WaterGunTimer.swift  WorkerController.swift  levels.json
Boss-Man/Boss-Man.xcodeproj/: project.pbxproj
Resources/: Info.plist
Sources/Boss-Man/: BossAI.swift  BossManApp.swift  GameScene.swift  GridMap.swift  HUD.swift  Levels.swift  MazeBuilder.swift  MoveDirection.swift  PixelPerson.swift  SoundManager.swift  TitleScene.swift  main.swift
Sources/BossMan/: BossAI.swift  HUD.swift  Levels.swift  MazeBuilder.swift  Pathfinder.swift  main.swift
boss-man-android-webview/: settings.gradle
boss-man-android-webview/app/: build.gradle
boss-man-box2d-sfml-cpp/: CMakeLists.txt
boss-man-box2d-sfml-cpp/android/: gradle.properties  settings.gradle
boss-man-box2d-sfml-cpp/android/app/: build.gradle
boss-man-box2d-sfml-cpp/android/app/src/main/: AndroidManifest.xml
boss-man-box2d-sfml-cpp/resources/linux/: boss-man.desktop
boss-man-box2d-sfml-cpp/resources/windows/: app.rc
boss-man-box2d-sfml-cpp/scripts/: extract_emoji.py  extract_fonts.py  generate_voices.sh  release-macos.sh
boss-man-box2d-sfml-cpp/src/: AppPaths.hpp  Assets.cpp  Assets.hpp  BossAI.hpp  BossController.cpp  BossController.hpp  Constants.hpp  DoomScene.cpp  DoomScene.hpp  EmojiText.cpp  EmojiText.hpp  EmojiTexture.mm  Game.cpp  Game.hpp  GridMap.cpp  GridMap.hpp  HUDRenderer.cpp  HUDRenderer.hpp  InputController.hpp  IsoScene.cpp  IsoScene.hpp  LevelEditor.cpp  LevelEditor.hpp  LevelLoader.cpp  LevelStore.cpp  LocalLeaderboard.hpp  MacWindow.hpp  MacWindow.mm  MazeRenderer.cpp  MazeRenderer.hpp  MoveDirection.hpp  PhysicsWorld.cpp  PixelPersonRenderer.cpp  PixelPersonRenderer.hpp  RoundState.hpp  Scene3D.hpp  ScorePopup.cpp  ScorePopup.hpp  Settings.hpp  SoundManager.cpp  (+13 more)
boss-man-linux-webview/: CMakeLists.txt  bossman.desktop  main.c
boss-man-spritekit-desktop/: Package.swift  build.sh
boss-man-spritekit-desktop/Resources/: AppIcon.icns
boss-man-spritekit-swift/Boss-Man/: Bonus3DScene.swift  BonusScene.swift  BossAI.swift  BossBlueprint.swift  BossController.swift  BossManApp.swift  ContactRouter.swift  DoomScene.swift  GameCenterClient.swift  GameOverKeyCompat.swift  GameOverScene.swift  GameOverScreen.swift  GameRandom.swift  GameScene.swift  GameState.swift  GridMap.swift  HUD.swift  IsoScene.swift  LeaderboardPanel.swift  LevelEditorScene.swift  LevelStoreIO.swift  LevelTravelers.swift  Levels.swift  LocalHighScores.swift  MainQueueCompat.swift  MazeBuilder.swift  MoveDirection.swift  Pathfinder.swift  Persistence.swift  PhysicsCategory.swift  PixelPerson.swift  PointerInputController.swift  PowerPelletTimer.swift  RenderScale.swift  RoundState.swift  SKSceneLoaderCompat.swift  SKTouchResponderCompat.swift  SKViewFullscreen.swift  Scene3D.swift  Scene3DShared.swift  (+16 more)
boss-man-spritekit-swift/Boss-Man.xcodeproj/: project.pbxproj
boss-man-spritekit-web/: .gitignore  Package.swift  README.md  build.sh
boss-man-spritekit-web-simple/: Package.swift
boss-man-spritekit-web-simple/native/: cbox2d.cpp
boss-man-spritekit-web-simple/web/: index.html  runtime.js
boss-man-spritekit-web/native/: cbox2d.cpp
boss-man-spritekit-web/scripts/: bundle.py
boss-man-spritekit-web/web/: .native-store.tsv  index.html  local.html  manifest.json  runtime-embedded-min.js  server.html
boss-man-wasm/: CMakeLists.txt  README.md
boss-man-wasm/emscripten/: shell.html
boss-man-wasm/isengine/: isEngineSDLWrapper.cpp  isEngineSDLWrapper.h  isEngineWrapper.cpp  isEngineWrapper.h
boss-man-wasm/resources/macos/: AppIcon.icns
boss-man-wasm/sfml-compat/SFML/: Audio.hpp  Graphics.hpp  System.hpp
boss-man-wasm/sfml-compat/SFML/System/: Vector2.hpp
boss-man-wasm/src/: AppPaths.hpp  Assets.cpp  Assets.hpp  BossAI.cpp  BossController.cpp  EmojiText.cpp  EmojiTextureStub.cpp  Game.cpp  Game.hpp  GridMap.hpp  InputController.cpp  InputController.hpp  LevelEditor.cpp  LevelEditor.hpp  LevelStore.hpp  MazeRenderer.cpp  MazeRenderer.hpp  PhysicsWorld.hpp  PixelPersonRenderer.cpp  PixelPersonRenderer.hpp  SoundManager.cpp  SoundManager.hpp  TitleScreen.cpp  TitleScreen.hpp  UiScale.hpp  WaterDroplet.cpp  WaterGunState.hpp  main.cpp
boss-man-wasm/tools/: gen_sfx.cpp
boss-man-web/: .gitignore  assets  build-web.sh
boss-man-web/assets/: manifest.json
boss-man-web/src/: AppPaths.hpp  Assets.cpp  Assets.hpp  Constants.hpp  ContactRouter.cpp  ContactRouter.hpp  HUDRenderer.cpp  InputController.hpp  LevelLoader.cpp  LevelLoader.hpp  LevelStore.cpp  LocalLeaderboard.hpp  MacWindow.hpp  Pathfinder.cpp  Pathfinder.hpp  main.cpp  (+7 more)
boss-man-windows-webview/: BossMan.csproj  Program.cs
docs/: sfml-native-backend.md
scripts/: README.md  level_check.py  level_check.sh  validate_level.swift
superbox64-wasmkit/: README.md  build.sh
wasm-web-kit/: .gitignore  README.md  build.sh  runtime.js
(+154 files in other folders)
